:hammer: Remove style balise in html and add list-style-type: none; on <ul>

--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+ul {
+    list-style-type: none;
+}
+
+.logo-img {
+    width: 70%;
+}
+
 .bloc_title {
     width: 70%;
     margin: auto;
